--- a/web/templates/user/login.html
+++ b/web/templates/user/login.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="col-md-6">
 			<div class="ibox-content">
-				<form class="m-t" role="form" action="{{ buildUrl('/user/login') }}" method="post">
+				<div class="m-t" role="form" >
                     <div class="form-group text-center">
                         <h2 class="font-bold">登录</h2>
                     </div>
@@ -25,7 +25,7 @@
 						<input type="password" name="login_pwd" class="form-control" placeholder="请输入登录密码">
 					</div>
 					<button type="submit" class="btn btn-primary block full-width m-b">登录</button>
-                </form>
+                </div>
 			</div>
 		</div>
 	</div>
